Added articles, Search Articles and preference APIs on the swagger.
